

                 SCons - a software construction tool

                            Change Log

RELEASE 2.X.X - 

  From Mortoray:
    - Make -s (silent mode) be silent about entering subdirs (#2976).
    - Fix cloning of builders when cloning environment (#2821).

  From Gary Oberbrunner:
    - Show valid Visual Studio architectures in error message
       when user passes invalid arch.

  From Alexey Petruchik:
    - Support for Microsoft Visual Studio 11 (both using it
      and generating MSVS11 solution files).
    
  From Alexey Klimkin:
    - Fixed the Taskmaster, curing spurious build failures in
      multi-threaded runs (#2720).
    
  From Dirk Baechle:
    - Improved documentation of command-line variables (#2809).
    - Fixed scons-doc.py to properly convert main XML files (#2812).

  From Rob Managan:
    - Updated the TeX builder to support LaTeX's multibib package.

  From Arve Knudsen:
    - Test for FORTRANPPFILESUFFIXES (#2129).


RELEASE 2.1.0 - Mon, 09 Sep 2011 20:54:57 -0700

  From Anton Lazarev:
    - Fix Windows resource compiler scanner to accept DOS line endings.

  From Matthias:
    - Update MSVS documents to remove note indicating that only one
      project is currently supported per solution file.

  From Grzegorz Bizoń:
    - Fix long compile lines in batch mode by using TEMPFILE
    - Fix MSVC_BATCH=False (was treating it as true)

  From Justin Gullingsrud:
    - support -std=c++0x and related CXXFLAGS in pkgconfig (ParseFlags)

  From Vincent Beffara:
    - Support -dylib_file in pkgconfig (ParseFlags)

  From Gary Oberbrunner and Sohail Somani:
    - new construction variable WINDOWS_EMBED_MANIFEST to automatically
      embed manifests in Windows EXEs and DLLs.

  From Gary Oberbrunner:
    - Fix Visual Studio project generation when CPPPATH contains Dir nodes
    - Ensure Visual Studio project is regenerated when CPPPATH or CPPDEFINES change
    - Fix unicode error when using non-ASCII filenames with Copy or Install